@@ -1,4 +1,6 @@
-23.dec (la)
+23.dec (lv)
+      - feature request #8355: bww import: initial implementation
+       (la)
       - fix #8369: Delete one instrument removes slurs from others
 22.dec (lv)
       - feature request #8355: bww import: framework and bww to xml converter
